--- a/Experiments/Billy/Unit1.2_Intent/app/src/main/res/layout/activity_mitra.xml
+++ b/Experiments/Billy/Unit1.2_Intent/app/src/main/res/layout/activity_mitra.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_launcher_background"
     android:orientation="vertical"
-    android:rotationX="-26"
-    android:rotationY="6"
+    android:visibility="visible"
+    app:divider="@android:drawable/alert_dark_frame"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,9 +14,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="50dp"
-        android:textColor="#000000"
-        android:textSize="50dp"></TextView>
+        android:layout_marginTop="200dp"
+        android:text="Intent Example"
+        android:textColor="#3F51B5"
+        android:textSize="30dp"
+        android:visibility="visible"></TextView>
+
+    <ImageView
+        android:id="@+id/mitra"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/mitra" />
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
