--- a/Frontend/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:textSize="20dp"></TextView>
 
         <EditText
-            android:id="@+id/login_username_edt"
+            android:id="@+id/login_email_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:gravity="center"
