--- a/Frontend/app/src/main/res/layout/activity_settings.xml
+++ b/Frontend/app/src/main/res/layout/activity_settings.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical"
     tools:context=".SettingActivity">
 
+    <!-- Back Button -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp">
+
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,11 +62,9 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:gravity="center"
-            android:hint="Enter Username Here"></EditText>
+            android:hint="Enter Password Here"></EditText>
 
     </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -81,12 +90,16 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Update User"
+            android:text="Update Password"
             android:textColor="#ffffff"
             android:textSize="20sp"></Button>
-
-
     </LinearLayout>
 
-
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onBackPressed"
+        android:text="Back"
+        android:textSize="16sp" />
 </androidx.appcompat.widget.LinearLayoutCompat>
