--- a/Frontend/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/app/src/main/res/layout/activity_main.xml
@@ -5,32 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+<ImageView
+android:id="@+id/imageView2"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+    android:src="@drawable/tittle" />
 
-    <Button
-        android:id="@+id/main_login_btn"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|center_horizontal"
-        android:backgroundTint="#C760D8"
-        android:text="Login"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:translationX="-10sp"
-        app:iconPadding="30dp"></Button>
+<LinearLayout
+android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/main_signup_btn"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Signup"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:translationX="10dp"
-        app:iconPadding="30dp"></Button>
+<Button
+android:id="@+id/main_login_btn"
+android:layout_width="wrap_content"
+    android:layout_height="120dp"
+    android:layout_margin="30dp"
+    android:backgroundTint="#C760D8"
+    android:text="Login"
+    android:textColor="#ffffff"
+    android:textSize="20sp"
+    app:iconPadding="30dp" />
 
+<Button
+android:id="@+id/main_signup_btn"
+android:layout_width="wrap_content"
+    android:layout_height="120dp"
+    android:layout_margin="30dp"
+    android:text="Signup"
+    android:textColor="#ffffff"
+    android:textSize="20sp"
+    app:iconPadding="30dp" />
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
