--- a/Frontend/app/src/main/res/layout/activity_friends.xml
+++ b/Frontend/app/src/main/res/layout/activity_friends.xml
@@ -1,76 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:background="#D1FAD3"
     android:orientation="vertical"
     tools:context=".FriendsActivity">
 
-    <!-- Friend List Title -->
-    <TextView
-        android:id="@+id/friends_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Friend List"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <!-- Refresh Button -->
-    <Button
-        android:id="@+id/refresh_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Refresh"
-        android:layout_marginBottom="16dp"
-        android:onClick="onRefreshClick" />
+        <Button
+            android:id="@+id/exit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:backgroundTint="#FFFFFF"
+            android:text="Exit"
+            android:textColor="#000000" />
 
-    <!-- Friend List -->
+        <TextView
+            android:id="@+id/friends_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@android:drawable/editbox_background"
+            android:text="  Friends  "
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/request_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:text="Invite" />
+
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/friends_list"
         android:layout_width="match_parent"
-        android:layout_height="390dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_weight="1"
+        android:background="@android:drawable/btn_default"
+        android:backgroundTint="#FBFBFB"
         android:divider="@null"
         android:dividerHeight="0dp" />
 
-    <!-- Enter Friend's Email -->
     <EditText
         android:id="@+id/friend_email_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="30dp"
         android:hint="Enter Friend's Email"
         android:inputType="textEmailAddress" />
 
-    <!-- Add/Delete Friend Buttons -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/refresh_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:onClick="onRefreshClick"
+            android:text="Refresh" />
 
         <Button
             android:id="@+id/add_friend_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:backgroundTint="#4CAF50"
-            android:onClick="onAddFriendClick"
             android:text="Add Friend" />
 
         <Button
             android:id="@+id/delete_friend_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:backgroundTint="#F44336"
-            android:onClick="onDeleteFriendClick"
             android:text="Delete Friend" />
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
-
