--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -6,31 +6,35 @@
 
     <GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="347dp"
-        android:layout_height="458dp"
+        android:layout_width="392dp"
+        android:layout_height="516dp"
         android:background="@drawable/greyblock"
-        android:padding="16dp"
         android:columnCount="3"
-    android:rowCount="3"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+        android:padding="16dp"
+        android:rowCount="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.497">
 
-    <!-- Your ImageViews go here -->
-    <!-- Make sure to copy this ImageView block 9 times to fill the grid -->
+        <!-- Your ImageViews go here -->
+        <!-- Make sure to copy this ImageView block 9 times to fill the grid -->
+
         <ImageView
             android:id="@+id/whiteshape1"
-            android:layout_width="130dp"
-            android:layout_height="105dp"
+            android:layout_width="111dp"
+            android:layout_height="120dp"
+            android:layout_row="0"
+            android:layout_column="0"
             android:src="@drawable/whiteshape"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Repeat the ImageView for each cell in the grid -->
 
-    <!-- Repeat the ImageView for each cell in the grid -->
-
-</GridLayout>
+    </GridLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
