--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -23,6 +23,8 @@
             android:id="@+id/whiteshape1"
             android:layout_width="100dp"
             android:layout_height="120dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_row="0"
             android:layout_column="0"
             android:layout_rowWeight="1"
@@ -35,6 +37,8 @@
             android:id="@+id/whiteshape2"
             android:layout_width="100dp"
             android:layout_height="120dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_rowWeight="1"
@@ -47,6 +51,8 @@
             android:id="@+id/whiteshape3"
             android:layout_width="100dp"
             android:layout_height="120dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_row="0"
             android:layout_column="2"
             android:layout_rowWeight="1"
